chore: bust script cache

--- a/index.html
+++ b/index.html
@@ -84,6 +84,6 @@
   </main>
 
   <!-- Game logic -->
-  <script src="script.js"></script>
+  <script src="script.js?v=1"></script>
 </body>
 </html>
